add navigation page

--- a/src/blocks/radio-button/radio-button.pug
+++ b/src/blocks/radio-button/radio-button.pug
@@ -2,4 +2,4 @@ mixin radio-button(idName, labelName)
   div(class='radio')
     input(id= idName name='radio' type='radio' checked)
     label(for= idName class='radio-label')
-    label(for= idName)= labelName
+    label(for= idName class='radio__value')= labelName
