--- a/src/blocks/room-information/room-information.pug
+++ b/src/blocks/room-information/room-information.pug
@@ -1,5 +1,5 @@
 mixin room-information(icon, quality, descr, className)
-    div(class='roomin-formation')
+    div(class='room-information')
       div(class='room-information__wrapper row' class= className)
          i(class='material-icons')= icon
          div(class='room-information__description')
