--- a/src/components/info-room/info-room.scss
+++ b/src/components/info-room/info-room.scss
@@ -93,6 +93,9 @@
   margin-top: 5px;
 }
 
+.information-impression_second .btn-like{
+  width: 70px;
+}
 
 .information__text {
   font-size: 1.14rem;
