--- a/src/pages/search-page/search-page.pug
+++ b/src/pages/search-page/search-page.pug
@@ -12,7 +12,7 @@ html
       .header__btn_signup
       +button-signup('Зарегистрироватьcя', 'signup-page.html')
     .main-background-search
-      +form-search({checkin: 'Прибытие', checkout: 'Выезд', guests: 'Гости'}, 'подобрать номер')
+      +form-search( 'Найдём номера под ваши пожелания', {checkin: 'Прибытие', checkout: 'Выезд', guests: 'Гости'}, 'подобрать номер')
       p(class='slogan' style='white-space:pre;') 
         |Лучшие номера для вашей работы, 
         |  отдыха и просто вдохновения
