--- a/src/blocks/radio-button/radio-button.scss
+++ b/src/blocks/radio-button/radio-button.scss
@@ -1,50 +1,59 @@
 .radio {
-    input[type="radio"] {
-      position: absolute;
+  input[type="radio"] {
+    position: absolute;
+    opacity: 0;
+    + .radio-label {
+      &:before {
+        content: "";
+        background: #fff;
+        border-radius: 100%;
+        border: 2px solid rgba(31, 32, 65, 0.25);
+        display: inline-block;
+        width: 1.9em;
+        height: 1.9em;
+        position: relative;
+        top: -0.1em;
+        margin-right: 1em;
+        vertical-align: top;
+        cursor: pointer;
+        text-align: center;
+        transition: all 250ms ease;
+      }
+    }
+    &:checked {
       opacity: 0;
       + .radio-label {
         &:before {
-          content: "";
-          background: #fff;
-          border-radius: 100%;
-          border: 2px solid rgba(31, 32, 65, 0.25);
-          display: inline-block;
-          width: 1.9em;
-          height: 1.9em;
-          position: relative;
-          top: -0.1em;
-          margin-right: 1em;
-          vertical-align: top;
-          cursor: pointer;
-          text-align: center;
-          transition: all 250ms ease;
+          border: 2px solid #bc9cff;
+          background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
+          box-shadow: inset 0 0 0 4px #fff;
         }
       }
-      &:checked {
-        opacity: 0;
-        + .radio-label {
-          &:before {
-            border: 2px solid #bc9cff;
-            background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
-            box-shadow: inset 0 0 0 4px #fff;
-          }
-        }
-      }
-      &:focus {
-        + .radio-label {
-          &:before {
-            outline: none;
-            border-color: #fff;
-          }
-        }
-      }
+    }
+    &:focus {
       + .radio-label {
-        &:empty {
-          &:before {
-            margin-right: 0;
-          }
+        &:before {
+          outline: none;
+          border-color: #fff;
+        }
+      }
+    }
+    + .radio-label {
+      &:empty {
+        &:before {
+          margin-right: 0;
         }
       }
     }
   }
-  
+}
+
+.radio__value {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 24px;
+  color: rgba(31, 32, 65, 0.75);
+  margin-left: 10px;
+}
