--- a/src/components/feedback/feedback.scss
+++ b/src/components/feedback/feedback.scss
@@ -40,7 +40,24 @@
   }
   
   
-
+  .btn-like {
+    border: 2px solid rgba(31, 32, 65, 0.25);
+    outline: none;
+    color: rgba(31, 32, 65, 0.25);
+    background: #ffffff;
+    border-radius: 15px;
+    font-size: 14px;
+    cursor: pointer;
+    width: 90px;
+    height: 30px;
+    margin-left: 20px;
+    margin-top: 5px;
+  }
+  
+  .btn-like span {
+    margin-left: 5px;
+  }
+  
   
   @media only screen and (max-width: 600px) {
     .room-feedback {
@@ -109,3 +126,4 @@
     }
   }
   
+
