--- a/src/index.pug
+++ b/src/index.pug
@@ -22,4 +22,5 @@ html(lang="en")
     script(src="src/index.js")
     body
         .wrapper    
-            include pages/search-page/search-page.pug
+            //- include pages/search-page/search-page.pug
+            include pages/navigation-page/navigation-page.pug
